Fix logo image filename for consistency in branding

--- a/drywall-repair-toronto.html
+++ b/drywall-repair-toronto.html
@@ -37,7 +37,7 @@
       border-bottom: 1px solid #ddd;
       min-height: 82px;
     ">
-    <img src="z-photos/ReadyFix -Logo-Card.avif" alt="Logo" style="max-width: 120px;"/>
+    <img src="z-photos/Ready-Fix-Logo-Card.avif" alt="Logo" style="max-width: 120px;"/>
     <nav id="monitornav" style="
       display: flex;
       flex-direction: row;
