Fix logo image filename for consistency in branding

--- a/drywall-repair-toronto.html
+++ b/drywall-repair-toronto.html
@@ -425,7 +425,7 @@
 
   <footer>
     <div class="footer-top">
-      <img src="z-photos/ReadyFix -Logo-Card.avif" alt="Logo"
+      <img src="z-photos/Ready-Fix-Logo-Card.avif" alt="Logo"
         style="max-width: 120px; margin-bottom: 16px; height:fit-content !important;" />
       <div>
         <h4>Pages</h4>
