Add Google tag manager script for enhanced tracking and analytics

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     content="Fast, reliable handyman services in Toronto: drywall repair, painting touch-ups, door & trim fixes, caulking, TV mounting, shelves. Call 647-699-4607." />
   <link rel="canonical" href="https://readyfix.ca" />
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S58K8S2G0D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S58K8S2G0D');
+</script>
+
   <!-- Open Graph / Twitter -->
   <meta property="og:title" content="ReadyFix Handyman Services - Toronto" />
   <meta property="og:description" content="Quick, reliable home solutions. Call 647-699-4607." />
