Added pages and re-aligned contnent

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ReadyFix Handyman | Trusted Toronto Repairs</title>
-  <meta name="description" content="ReadyFix Handyman tackles drywall, carpentry, and punch-list repairs anywhere in Toronto & the GTA. Call 647-699-4607 for fast, insured help.">
+  <meta name="description" content="Ready Fix Handyman tackles drywall, carpentry, and punch-list repairs anywhere in Toronto & the GTA. Call 647-699-4607 for fast, insured help.">
   <link rel="canonical" href="https://readyfix.ca/">
   <meta property="og:locale" content="en_CA">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="ReadyFix Handyman | Trusted Toronto Repairs">
+  <meta property="og:title" content="Ready Fix Handyman | Trusted Toronto Repairs">
   <meta property="og:description" content="Same-week drywall & handyman repairs in Toronto. Call 647-699-4607.">
   <meta property="og:url" content="https://readyfix.ca/">
-  <meta property="og:site_name" content="ReadyFix Handyman Services">
+  <meta property="og:site_name" content="Ready Fix Handyman Services">
   <meta property="og:image" content="https://readyfix.ca/img/og-image.jpg">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="ReadyFix Handyman | Trusted Toronto Repairs">
+  <meta name="twitter:title" content="Ready Fix Handyman | Trusted Toronto Repairs">
   <meta name="twitter:description" content="Local handyman for drywall, trim, doors, and more. Call 647-699-4607.">
   <meta name="twitter:image" content="https://readyfix.ca/img/og-image.jpg">
   <link rel="stylesheet" href="/css/main.css">
@@ -28,7 +28,7 @@
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "@id": "https://readyfix.ca/#business",
-    "name": "ReadyFix Handyman Services",
+    "name": "Ready Fix Handyman Services",
     "image": "https://readyfix.ca/img/og-image.jpg",
     "url": "https://readyfix.ca/",
     "telephone": "+1-647-699-4607",
@@ -59,8 +59,8 @@
         "Friday",
         "Saturday"
       ],
-      "opens": "08:00",
-      "closes": "20:00"
+      "opens": "09:00",
+      "closes": "17:00"
     }],
     "sameAs": ["https://www.instagram.com/readyfixhandyman"]
   }
@@ -92,69 +92,75 @@
   </header>
   <main id="main">
     <section class="hero" aria-labelledby="hero-title">
-      <div class="hero__copy">
-        <p class="eyebrow">Serving Toronto &amp; GTA</p>
-        <h1 id="hero-title">Handyman pros for drywall, trim, and punch lists</h1>
-        <p class="lead">ReadyFix arrives on time with the tools, materials, and insurance you expect. We patch drywall, tune doors, refresh caulking, and finish the repairs blocking your closing day.</p>
-        <div class="hero__actions">
-          <a class="btn" data-track="cta:call" href="tel:6476994607">647-699-4607</a>
-          <a class="hero__link" href="#contact">Get a quote</a>
+      <div class="section-inner hero__inner">
+        <div class="hero__copy">
+          <p class="eyebrow">Serving Toronto &amp; GTA</p>
+          <h1 id="hero-title">Handyman pros for drywall, trim, and punch lists</h1>
+          <p class="lead">ReadyFix arrives on time with the tools, materials, and insurance you expect. We patch drywall, tune doors, refresh caulking, and finish the repairs blocking your closing day.</p>
+          <div class="hero__actions" style="margin-bottom: 2rem;">
+            <a class="btn" data-track="cta:call" href="tel:6476994607">647-699-4607</a>
+            <a class="hero__link" href="#contact">Get a quote</a>
+          </div>
+          <ul class="hero__stats" aria-label="Fast facts">
+            <li><span>90+</span> Toronto homeowners helped this year</li>
+            <li><span>&lt;24h</span> average response time</li>
+            <li><span>Licensed &amp; insured</span> for residential work</li>
+          </ul>
         </div>
-        <ul class="hero__stats" aria-label="Fast facts">
-          <li><span>90+</span> Toronto homeowners helped this year</li>
-          <li><span>&lt;24h</span> average response time</li>
-          <li><span>Licensed &amp; insured</span> for residential work</li>
-        </ul>
-      </div>
-      <div class="hero__media">
-        <picture>
-          <source type="image/avif" srcset="/img/hero-handyman-800.avif 800w, /img/hero-handyman-1200.avif 1200w" sizes="(max-width: 900px) 100vw, 560px">
-          <source type="image/webp" srcset="/img/hero-handyman-800.webp 800w, /img/hero-handyman-1200.webp 1200w" sizes="(max-width: 900px) 100vw, 560px">
-          <img src="/img/hero-handyman-1200.jpg" srcset="/img/hero-handyman-800.jpg 800w, /img/hero-handyman-1200.jpg 1200w" sizes="(max-width: 900px) 100vw, 560px" alt="ReadyFix technician completing drywall repair in a Toronto condo" width="1200" height="900" decoding="async" fetchpriority="high">
-        </picture>
+        <div class="hero__media">
+          <picture>
+            <source type="image/avif" srcset="/img/hero-handyman-800.avif 800w, /img/hero-handyman-1200.avif 1200w" sizes="(max-width: 900px) 100vw, 560px">
+            <source type="image/webp" srcset="/img/hero-handyman-800.webp 800w, /img/hero-handyman-1200.webp 1200w" sizes="(max-width: 900px) 100vw, 560px">
+            <img src="/img/hero-handyman-1200.jpg" srcset="/img/hero-handyman-800.jpg 800w, /img/hero-handyman-1200.jpg 1200w" sizes="(max-width: 900px) 100vw, 560px" alt="ReadyFix technician completing drywall repair in a Toronto condo" width="1200" height="900" decoding="async" fetchpriority="high">
+          </picture>
+        </div>
       </div>
     </section>
 
-    <section class="service-grid" aria-labelledby="services-title">
-      <div class="section-heading">
+        <section class="service-grid" aria-labelledby="services-title">
+      <div class="section-inner">
+        <div class="section-heading">
         <p class="eyebrow">Same-week availability</p>
         <h2 id="services-title">High-impact fixes we tackle daily</h2>
         <p>No upsells, just the jobs blocking closings, tenant move-ins, or MLS photos.</p>
       </div>
       <ul>
-        <li><a href="/services/drywall-repair-toronto/">
-          <span class="icon" aria-hidden="true">🛠️</span>
-          <div>
-            <h3>Drywall repair &amp; texture</h3>
-            <p>Ceiling patches, seam repair, water damage, ready for paint.</p>
-          </div>
-        </a></li>
-        <li><a href="/services/#carpentry">
-          <span class="icon" aria-hidden="true">🚪</span>
-          <div>
-            <h3>Doors &amp; trim</h3>
-            <p>Sticky doors, baseboard replacement, casing upgrades.</p>
-          </div>
-        </a></li>
-        <li><a href="/services/#kitchens">
-          <span class="icon" aria-hidden="true">🧰</span>
+        <li><a href="/services/cabinet-repair-toronto/">
+          <span class="icon" aria-hidden="true">&#128295;</span>
           <div>
             <h3>Cabinets &amp; hardware</h3>
             <p>Loose hinges, drawer slides, soft-close retrofits.</p>
           </div>
         </a></li>
-        <li><a href="/services/#oddjobs">
-          <span class="icon" aria-hidden="true">🔧</span>
+        <li><a href="/services/punch-list/">
+          <span class="icon" aria-hidden="true">&#128221;</span>
           <div>
             <h3>Punch-list help</h3>
             <p>Caulking, TV mounts, shelving, inspection fixes.</p>
           </div>
         </a></li>
+        <li><a href="/services/drywall-repair-toronto/">
+          <span class="icon" aria-hidden="true">???</span>
+          <div>
+            <h3>Drywall repair &amp; texture</h3>
+            <p>Ceiling patches, seam repair, water damage, ready for paint.</p>
+          </div>
+        </a></li>
+        <li><a href="/services/doors-trim/">
+          <span class="icon" aria-hidden="true">&#128682;</span>
+          <div>
+            <h3>Doors &amp; trim</h3>
+            <p>Sticky doors, baseboard replacement, casing upgrades.</p>
+          </div>
+        </a></li>
       </ul>
+    </div>
+      
     </section>
 
-    <section id="trust" class="trust" aria-labelledby="trust-title">
-      <div>
+    <section id="trust" aria-labelledby="trust-title">
+      <div class="section-inner trust__inner">
+        <div>
         <p class="eyebrow">Trusted locally</p>
         <h2 id="trust-title">Homeowners call us back because we keep promises</h2>
         <ul class="badges">
@@ -163,76 +169,83 @@
           <li>2-year workmanship warranty</li>
         </ul>
       </div>
-      <div class="testimonials" aria-label="Testimonials">
-        <figure>
-          <blockquote>ReadyFix patched a massive ceiling hole and matched the texture in one visit. Clean, respectful, on-budget.</blockquote>
-          <figcaption>&mdash; Jenna, Junction Triangle</figcaption>
-        </figure>
-        <figure>
-          <blockquote>They handled my pre-listing touch-ups and even coordinated with the painter. Sold the condo in 48 hours.</blockquote>
-          <figcaption>&mdash; Daniel, Liberty Village</figcaption>
-        </figure>
-        <figure>
-          <blockquote>Smart recommendations, clear pricing, and fast communication. ReadyFix is now on our property manager list.</blockquote>
-          <figcaption>&mdash; Rachel, East York</figcaption>
-        </figure>
+        <div class="testimonials" aria-label="Testimonials">
+          <figure>
+            <blockquote>ReadyFix patched a massive ceiling hole and matched the texture in one visit. Clean, respectful, on-budget.</blockquote>
+            <figcaption>&mdash; Jenna, Junction Triangle</figcaption>
+          </figure>
+          <figure>
+            <blockquote>They handled my pre-listing touch-ups and even coordinated with the painter. Sold the condo in 48 hours.</blockquote>
+            <figcaption>&mdash; Daniel, Liberty Village</figcaption>
+          </figure>
+          <figure>
+            <blockquote>Smart recommendations, clear pricing, and fast communication. ReadyFix is now on our property manager list.</blockquote>
+            <figcaption>&mdash; Rachel, East York</figcaption>
+          </figure>
+        </div>
       </div>
     </section>
 
     <section class="process" aria-labelledby="process-title">
-      <h2 id="process-title">How ReadyFix delivers</h2>
-      <ol>
-        <li><h3>Scope</h3><p>Share photos via text or email for accurate estimates.</p></li>
-        <li><h3>Schedule</h3><p>Choose an arrival window that fits tenant or realtor timelines.</p></li>
-        <li><h3>Repair</h3><p>We arrive stocked with drywall, fast-set compounds, and specialty tools.</p></li>
-        <li><h3>Sign-off</h3><p>Walk-through with you, photo updates if you are remote, and invoicing online.</p></li>
-      </ol>
+      <div class="section-inner">
+        <h2 id="process-title">How ReadyFix delivers</h2>
+        <ol>
+          <li><h3>Scope</h3><p>Share photos via text or email for accurate estimates.</p></li>
+          <li><h3>Schedule</h3><p>Choose an arrival window that fits tenant or realtor timelines.</p></li>
+          <li><h3>Repair</h3><p>We arrive stocked with drywall, fast-set compounds, and specialty tools.</p></li>
+          <li><h3>Sign-off</h3><p>Walk-through with you, photo updates if you are remote, and invoicing online.</p></li>
+        </ol>
+      </div>
     </section>
 
     <section class="cta-band" aria-labelledby="cta-title">
-      <div>
-        <p class="eyebrow">Need it this week?</p>
-        <h2 id="cta-title">Call or message for guaranteed arrival times</h2>
-      </div>
-      <div class="cta-band__actions">
-        <a class="btn" data-track="cta:call" href="tel:6476994607">647-699-4607</a>
-        <a class="btn btn--ghost" href="#contact">Send project details</a>
+      <div class="section-inner cta-band__inner">
+        <div>
+          <p class="eyebrow">Need it this week?</p>
+          <h2 id="cta-title">Call or message for guaranteed arrival times</h2>
+        </div>
+        <div class="cta-band__actions">
+          <a class="btn" data-track="cta:call" href="tel:6476994607">647-699-4607</a>
+          <a class="btn btn--ghost btn--ghost--dark" href="#contact">Send project details</a>
+        </div>
       </div>
     </section>
 
     <section id="contact" class="contact" aria-labelledby="contact-title">
-      <div>
-        <p class="eyebrow">Contact</p>
-        <h2 id="contact-title">Share your punch list</h2>
-        <p>We reply within one business day. Include photos when possible.</p>
-        <dl class="contact-info">
-          <div><dt>Call</dt><dd><a data-track="cta:call" href="tel:6476994607">647-699-4607</a></dd></div>
-          <div><dt>Email</dt><dd><a href="mailto:braydon@readyfix.ca">braydon@readyfix.ca</a></dd></div>
-          <div><dt>Hours</dt><dd>Mon&ndash;Sat 8am&ndash;8pm</dd></div>
-        </dl>
+      <div class="section-inner contact__inner">
+        <div>
+          <p class="eyebrow">Contact</p>
+          <h2 id="contact-title">Share your punch list</h2>
+          <p>We reply within one business day. Include photos when possible.</p>
+          <dl class="contact-info">
+            <div><dt>Call</dt><dd><a data-track="cta:call" href="tel:6476994607">647-699-4607</a></dd></div>
+            <div><dt>Email</dt><dd><a href="mailto:braydon@readyfix.ca">braydon@readyfix.ca</a></dd></div>
+            <div><dt>Hours</dt><dd>Mon&ndash;Fri 9am&ndash;5pm</dd></div>
+          </dl>
+        </div>
+        <form id="contact-form" class="contact-form" action="https://formspree.io/f/xrbowkdd" method="POST" data-track="cta:form_submit">
+          <input type="hidden" name="_redirect" value="/thanks.html">
+          <label for="contact-name">Name</label>
+          <input id="contact-name" name="name" type="text" autocomplete="name" required>
+          <label for="contact-email">Email</label>
+          <input id="contact-email" name="email" type="email" autocomplete="email" required>
+          <label for="contact-phone">Phone</label>
+          <input id="contact-phone" name="phone" type="tel" autocomplete="tel">
+          <label for="contact-address">Address or neighbourhood</label>
+          <input id="contact-address" name="address" type="text" autocomplete="address-line1">
+          <label for="contact-message">Project details</label>
+          <textarea id="contact-message" name="message" rows="4" required></textarea>
+          <label class="sr-only" for="contact-company">Leave blank</label>
+          <input id="contact-company" name="company" type="text" tabindex="-1" autocomplete="off">
+          <button class="btn" type="submit">Send details</button>
+          <p class="form-status" aria-live="polite"></p>
+        </form>
       </div>
-      <form id="contact-form" class="contact-form" action="https://formspree.io/f/xrbowkdd" method="POST" data-track="cta:form_submit">
-        <input type="hidden" name="_redirect" value="/thanks.html">
-        <label for="contact-name">Name</label>
-        <input id="contact-name" name="name" type="text" autocomplete="name" required>
-        <label for="contact-email">Email</label>
-        <input id="contact-email" name="email" type="email" autocomplete="email" required>
-        <label for="contact-phone">Phone</label>
-        <input id="contact-phone" name="phone" type="tel" autocomplete="tel">
-        <label for="contact-address">Address or neighbourhood</label>
-        <input id="contact-address" name="address" type="text" autocomplete="address-line1">
-        <label for="contact-message">Project details</label>
-        <textarea id="contact-message" name="message" rows="4" required></textarea>
-        <label class="sr-only" for="contact-company">Leave blank</label>
-        <input id="contact-company" name="company" type="text" tabindex="-1" autocomplete="off">
-        <button class="btn" type="submit">Send details</button>
-        <p class="form-status" aria-live="polite"></p>
-      </form>
     </section>
   </main>
 
   <footer class="site-footer">
-    <div class="site-footer__top">
+    <div class="section-inner site-footer__top">
       <div>
         <p class="eyebrow">ReadyFix Handyman Services</p>
         <p>Toronto-based handyman specializing in drywall repair, trim, and real-estate punch lists.</p>
@@ -251,7 +264,7 @@
         <p>Toronto core, East &amp; West York, Scarborough, Etobicoke, North York, Mississauga.</p>
       </div>
     </div>
-    <div class="site-footer__bottom">
+    <div class="section-inner site-footer__bottom">
       <p>&copy; <span id="year"></span> ReadyFix Handyman Services</p>
       <a href="/robots.txt">Robots</a>
       <a href="/sitemap.xml">Sitemap</a>
@@ -264,3 +277,4 @@
   </div>
 </body>
 </html>
+
