--- a/services/drywall-repair-toronto/index.html
+++ b/services/drywall-repair-toronto/index.html
@@ -75,114 +75,128 @@
 
   <main id="main">
     <nav class="breadcrumbs" aria-label="Breadcrumbs">
-      <ol>
-        <li><a href="/">Home</a></li>
-        <li><a href="/services/">Services</a></li>
-        <li aria-current="page">Drywall repair &amp; patching</li>
-      </ol>
+      <div class="section-inner">
+        <ol>
+          <li><a href="/">Home</a></li>
+          <li><a href="/services/">Services</a></li>
+          <li aria-current="page">Drywall repair &amp; patching</li>
+        </ol>
+      </div>
     </nav>
 
     <section class="page-hero" aria-labelledby="drywall-h1">
-      <p class="eyebrow">Drywall repair &amp; patching in Toronto</p>
-      <h1 id="drywall-h1">Drywall repairs that disappear</h1>
-      <p>ReadyFix is the crew Toronto realtors and homeowners call for fast, dust-controlled drywall work. We prep the zone, match texture, and leave the area paint-ready before we clean up.</p>
-      <div class="hero__actions">
-        <a class="btn" data-track="cta:call" href="tel:6476994607">647-699-4607</a>
-        <a class="hero__link" href="#contact">Get a quote</a>
+      <div class="section-inner">
+        <p class="eyebrow">Drywall repair &amp; patching in Toronto</p>
+        <h1 id="drywall-h1">Drywall repairs that disappear</h1>
+        <p>ReadyFix is the crew Toronto realtors and homeowners call for fast, dust-controlled drywall work. We prep the zone, match texture, and leave the area paint-ready before we clean up.</p>
+        <div class="hero__actions">
+          <a class="btn" data-track="cta:call" href="tel:6476994607">647-699-4607</a>
+          <a class="hero__link" href="#contact">Get a quote</a>
+        </div>
       </div>
     </section>
 
     <section class="service-details" aria-labelledby="scope-title">
-      <div>
-        <h2 id="scope-title">What we fix</h2>
-        <ul>
-          <li>Water damage, plumbing access holes, and ceiling stains</li>
-          <li>Cracked joints, popped screws, and seam telegraphing</li>
-          <li>Orange peel, knockdown, and flat texture blending</li>
-          <li>Basement drywall finishing and skim coats</li>
-        </ul>
-      </div>
-      <div>
-        <h2>Why Toronto homeowners choose ReadyFix</h2>
-        <p>We show up with HEPA vacuums, floor protection, portable lights, and quick-set compounds. That means less disruption for condos and faster drying times for tight schedules.</p>
-        <ul class="badges">
-          <li>Licensed &amp; insured</li>
-          <li>Clean zones &amp; dust control</li>
-          <li>2-year workmanship warranty</li>
-        </ul>
+      <div class="section-inner">
+        <div>
+          <h2 id="scope-title">What we fix</h2>
+          <ul>
+            <li>Water damage, plumbing access holes, and ceiling stains</li>
+            <li>Cracked joints, popped screws, and seam telegraphing</li>
+            <li>Orange peel, knockdown, and flat texture blending</li>
+            <li>Basement drywall finishing and skim coats</li>
+          </ul>
+        </div>
+        <div>
+          <h2>Why Toronto homeowners choose ReadyFix</h2>
+          <p>We show up with HEPA vacuums, floor protection, portable lights, and quick-set compounds. That means less disruption for condos and faster drying times for tight schedules.</p>
+          <ul class="badges">
+            <li>Licensed &amp; insured</li>
+            <li>Clean zones &amp; dust control</li>
+            <li>2-year workmanship warranty</li>
+          </ul>
+        </div>
       </div>
     </section>
 
     <section class="faq" aria-labelledby="drywall-faq">
-      <h2 id="drywall-faq">Drywall repair FAQs</h2>
-      <details open>
-        <summary>Can you match existing texture or orange peel?</summary>
-        <p>Yes. We replicate light orange peel, knockdown, or smooth finishes with texture hoppers and hand trowels, then sand for a flush surface.</p>
-      </details>
-      <details>
-        <summary>Do you repair drywall in condos downtown Toronto?</summary>
-        <p>We work in condos daily. We confirm elevator bookings, protect hallways, and keep noise to a minimum for neighbours.</p>
-      </details>
-      <details>
-        <summary>What sizes of holes can you fix?</summary>
-        <p>We patch everything from nail pops to large 4x4 ft cut-outs. Anything larger becomes a board replacement, which we also handle.</p>
-      </details>
-      <details>
-        <summary>How long before the wall can be painted?</summary>
-        <p>With quick-set compounds we finish sanding and priming the same day. Painters can usually follow within 24 hours.</p>
-      </details>
+      <div class="section-inner">
+        <h2 id="drywall-faq">Drywall repair FAQs</h2>
+        <details open>
+          <summary>Can you match existing texture or orange peel?</summary>
+          <p>Yes. We replicate light orange peel, knockdown, or smooth finishes with texture hoppers and hand trowels, then sand for a flush surface.</p>
+        </details>
+        <details>
+          <summary>Do you repair drywall in condos downtown Toronto?</summary>
+          <p>We work in condos daily. We confirm elevator bookings, protect hallways, and keep noise to a minimum for neighbours.</p>
+        </details>
+        <details>
+          <summary>What sizes of holes can you fix?</summary>
+          <p>We patch everything from nail pops to large 4x4 ft cut-outs. Anything larger becomes a board replacement, which we also handle.</p>
+        </details>
+        <details>
+          <summary>How long before the wall can be painted?</summary>
+          <p>With quick-set compounds we finish sanding and priming the same day. Painters can usually follow within 24 hours.</p>
+        </details>
+      </div>
     </section>
 
     <section class="service-area" aria-labelledby="area-title">
-      <div>
-        <h2 id="area-title">Service area</h2>
-        <p>We cover Toronto proper plus Etobicoke, North York, Scarborough, Mississauga, and Markham. Rapid condo response in downtown cores like CityPlace, King West, and Yonge &amp; Eglinton.</p>
-      </div>
-      <div>
-        <h3>Typical response time</h3>
-        <p>&lt;24 hours for quote, onsite within 2&ndash;4 days.</p>
-        <h3>Emergency repairs</h3>
-        <p>Same-day board up or moisture mitigation is available when leaks happen.</p>
+      <div class="section-inner">
+        <div>
+          <h2 id="area-title">Service area</h2>
+          <p>We cover Toronto proper plus Etobicoke, North York, Scarborough, Mississauga, and Markham. Rapid condo response in downtown cores like CityPlace, King West, and Yonge &amp; Eglinton.</p>
+        </div>
+        <div>
+          <h3>Typical response time</h3>
+          <p>&lt;24 hours for quote, onsite within 2&ndash;4 days.</p>
+          <h3>Emergency repairs</h3>
+          <p>Same-day board up or moisture mitigation is available when leaks happen.</p>
+        </div>
       </div>
     </section>
 
     <section class="cta-band" aria-labelledby="drywall-cta">
-      <div>
-        <p class="eyebrow">Toronto drywall pros</p>
-        <h2 id="drywall-cta">Call for guaranteed arrival windows</h2>
-      </div>
-      <div class="cta-band__actions">
-        <a class="btn" data-track="cta:call" href="tel:6476994607">647-699-4607</a>
-        <a class="btn btn--ghost" href="#contact">Send project photos</a>
+      <div class="section-inner cta-band__inner">
+        <div>
+          <p class="eyebrow">Toronto drywall pros</p>
+          <h2 id="drywall-cta">Call for guaranteed arrival windows</h2>
+        </div>
+        <div class="cta-band__actions">
+          <a class="btn" data-track="cta:call" href="tel:6476994607">647-699-4607</a>
+          <a class="btn btn--ghost" href="#contact">Send project photos</a>
+        </div>
       </div>
     </section>
 
     <section id="contact" class="contact" aria-labelledby="contact-title">
-      <div>
-        <p class="eyebrow">Contact</p>
-        <h2 id="contact-title">Ready for a clean patch?</h2>
-        <p>Upload pictures or describe the damage and we will send a quote plus schedule options.</p>
+      <div class="section-inner contact__inner">
+        <div>
+          <p class="eyebrow">Contact</p>
+          <h2 id="contact-title">Ready for a clean patch?</h2>
+          <p>Upload pictures or describe the damage and we will send a quote plus schedule options.</p>
+        </div>
+        <form id="contact-form" class="contact-form" action="https://formspree.io/f/xrbowkdd" method="POST" data-track="cta:form_submit">
+          <input type="hidden" name="_redirect" value="/thanks.html">
+          <label for="drywall-name">Name</label>
+          <input id="drywall-name" name="name" type="text" required>
+          <label for="drywall-email">Email</label>
+          <input id="drywall-email" name="email" type="email" required>
+          <label for="drywall-address">Address / building</label>
+          <input id="drywall-address" name="address" type="text">
+          <label for="drywall-message">Damage description</label>
+          <textarea id="drywall-message" name="message" rows="4" required></textarea>
+          <label class="sr-only" for="drywall-company">Leave blank</label>
+          <input id="drywall-company" name="company" type="text" tabindex="-1" autocomplete="off">
+          <button class="btn" type="submit">Send details</button>
+          <p class="form-status" aria-live="polite"></p>
+        </form>
       </div>
-      <form id="contact-form" class="contact-form" action="https://formspree.io/f/xrbowkdd" method="POST" data-track="cta:form_submit">
-        <input type="hidden" name="_redirect" value="/thanks.html">
-        <label for="drywall-name">Name</label>
-        <input id="drywall-name" name="name" type="text" required>
-        <label for="drywall-email">Email</label>
-        <input id="drywall-email" name="email" type="email" required>
-        <label for="drywall-address">Address / building</label>
-        <input id="drywall-address" name="address" type="text">
-        <label for="drywall-message">Damage description</label>
-        <textarea id="drywall-message" name="message" rows="4" required></textarea>
-        <label class="sr-only" for="drywall-company">Leave blank</label>
-        <input id="drywall-company" name="company" type="text" tabindex="-1" autocomplete="off">
-        <button class="btn" type="submit">Send details</button>
-        <p class="form-status" aria-live="polite"></p>
-      </form>
     </section>
   </main>
 
   <footer class="site-footer">
-    <div class="site-footer__top">
+    <div class="section-inner site-footer__top">
       <div>
         <p class="eyebrow">ReadyFix Handyman Services</p>
         <p>Toronto-based handyman specializing in drywall repair, trim, and real-estate punch lists.</p>
@@ -200,7 +214,7 @@
         <p>Toronto core, East &amp; West York, Scarborough, Etobicoke, North York, Mississauga.</p>
       </div>
     </div>
-    <div class="site-footer__bottom">
+    <div class="section-inner site-footer__bottom">
       <p>&copy; <span id="year"></span> ReadyFix Handyman Services</p>
       <a href="/robots.txt">Robots</a>
       <a href="/sitemap.xml">Sitemap</a>
