--- a/drywall-repair-toronto.html
+++ b/drywall-repair-toronto.html
@@ -32,10 +32,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 
-<body>
+<body class="drywall-page">
 
 
 
