--- a/services/index.html
+++ b/services/index.html
@@ -43,96 +43,133 @@
 
   <main id="main">
     <section class="page-hero" aria-labelledby="services-h1">
-      <p class="eyebrow">Services</p>
-      <h1 id="services-h1">Toronto handyman services built for speed and quality</h1>
-      <p>Every visit is scheduled in tight windows, stocked with materials, and documented for your records.</p>
+      <div class="section-inner">
+        <p class="eyebrow">Services</p>
+        <h1 id="services-h1">Toronto handyman services built for speed and quality</h1>
+        <p>Every visit is scheduled in tight windows, stocked with materials, and documented for your records.</p>
+      </div>
     </section>
 
     <nav class="breadcrumbs" aria-label="Breadcrumbs">
-      <ol>
-        <li><a href="/">Home</a></li>
-        <li aria-current="page">Services</li>
-      </ol>
+      <div class="section-inner">
+        <ol>
+          <li><a href="/">Home</a></li>
+          <li aria-current="page">Services</li>
+        </ol>
+      </div>
     </nav>
 
     <section class="service-list" aria-label="Service categories">
-      <article id="drywall">
-        <a class="service-card" href="/services/drywall-repair-toronto/">
-          <span class="icon" aria-hidden="true">🛠️</span>
-          <div>
-            <h2>Drywall repair &amp; patching</h2>
-            <p>Ceiling/soffit repair, seam fixes, skim coats, sanding, priming, ready for paint.</p>
-          </div>
-        </a>
-      </article>
-      <article id="carpentry">
-        <a class="service-card" href="#contact">
-          <span class="icon" aria-hidden="true">🚪</span>
-          <div>
-            <h2>Doors, trim &amp; casing</h2>
-            <p>Hinge tuning, jamb repair, baseboard install, window/door casing refresh.</p>
-          </div>
-        </a>
-      </article>
-      <article id="kitchens">
-        <a class="service-card" href="#contact">
-          <span class="icon" aria-hidden="true">🧰</span>
-          <div>
-            <h2>Cabinet &amp; hardware fixes</h2>
-            <p>Soft-close retrofits, handle swaps, drawer slide replacement, shelf installs.</p>
-          </div>
-        </a>
-      </article>
-      <article id="oddjobs">
-        <a class="service-card" href="#contact">
-          <span class="icon" aria-hidden="true">🔧</span>
-          <div>
-            <h2>Inspection &amp; punch lists</h2>
-            <p>Caulking, grout touch-ups, TV mounts, shelving, exterior trim repairs.</p>
-          </div>
-        </a>
-      </article>
-      <article id="investors">
-        <a class="service-card" href="#contact">
-          <span class="icon" aria-hidden="true">🏢</span>
-          <div>
-            <h2>Condo &amp; rental turns</h2>
-            <p>Move-out punch lists, make-ready repairs, photo-ready finishes.</p>
-          </div>
-        </a>
-      </article>
+      <div class="section-inner">
+        <article id="kitchens">
+          <a class="service-card" href="/services/cabinet-repair-toronto/">
+            <span class="icon" aria-hidden="true">&#128295;</span>
+            <div>
+              <h2>Cabinet &amp; hardware fixes</h2>
+              <p>Soft-close retrofits, handle swaps, drawer slide replacement, shelf installs.</p>
+            </div>
+          </a>
+        </article>
+        <article id="oddjobs">
+          <a class="service-card" href="/services/punch-list/">
+            <span class="icon" aria-hidden="true">&#128221;</span>
+            <div>
+              <h2>Inspection &amp; punch lists</h2>
+              <p>Caulking, grout touch-ups, TV mounts, shelving, exterior trim repairs.</p>
+            </div>
+          </a>
+        </article>
+        <article id="drywall">
+          <a class="service-card" href="/services/drywall-repair-toronto/">
+            <span class="icon" aria-hidden="true">&#128737;</span>
+            <div>
+              <h2>Drywall repair &amp; patching</h2>
+              <p>Ceiling/soffit repair, seam fixes, skim coats, sanding, priming, ready for paint.</p>
+            </div>
+          </a>
+        </article>
+        <article id="carpentry">
+          <a class="service-card" href="/services/doors-trim/">
+            <span class="icon" aria-hidden="true">&#128682;</span>
+            <div>
+              <h2>Doors, trim &amp; casing</h2>
+              <p>Hinge tuning, jamb repair, baseboard install, window/door casing refresh.</p>
+            </div>
+          </a>
+        </article>
+        <article id="investors">
+          <a class="service-card" href="/services/small-jobs/">
+            <span class="icon" aria-hidden="true">&#128736;</span>
+            <div>
+              <h2>Various small jobs</h2>
+              <p>Quick fixes, adjustments, and small home tasks handled in one visit.</p>
+            </div>
+          </a>
+        </article>
+        <article id="mounting">
+          <a class="service-card" href="/services/mount-artwork-tv/">
+            <span class="icon" aria-hidden="true">&#128247;</span>
+            <div>
+              <h2>Mount artwork or TV</h2>
+              <p>Secure mounts with proper anchors, clean wire routing, and tidy setup.</p>
+            </div>
+          </a>
+        </article>
+        <article id="locks">
+          <a class="service-card" href="/services/lock-replacement/">
+            <span class="icon" aria-hidden="true">&#128274;</span>
+            <div>
+              <h2>Lock replacement</h2>
+              <p>Door hardware swaps, re-key coordination, strike adjustments for smooth latching.</p>
+            </div>
+          </a>
+        </article>
+        <article id="curtains">
+          <a class="service-card" href="/services/curtain-rod-installation/">
+            <span class="icon" aria-hidden="true">&#127902;</span>
+            <div>
+              <h2>Curtain rod installation</h2>
+              <p>Bracket layout, level installation, and hardware matched to your window frames.</p>
+            </div>
+          </a>
+        </article>
+      </div>
     </section>
 
     <section class="faq" aria-labelledby="services-faq">
-      <h2 id="services-faq">Service FAQs</h2>
-      <details>
-        <summary>How far ahead should I book?</summary>
-        <p>We keep open slots every week. Simple repairs book within 2&ndash;3 days; larger scopes schedule within 7.</p>
-      </details>
-      <details>
-        <summary>Are materials included?</summary>
-        <p>Yes, we stock common drywall, fasteners, and trim. Specialty finishes can be sourced at cost.</p>
-      </details>
-      <details>
-        <summary>Do you work with property managers?</summary>
-        <p>Absolutely. We coordinate key pickup, send before/after photos, and can invoice centrally.</p>
-      </details>
+      <div class="section-inner">
+        <h2 id="services-faq">Service FAQs</h2>
+        <details>
+          <summary>How far ahead should I book?</summary>
+          <p>We keep open slots every week. Simple repairs book within 2&ndash;3 days; larger scopes schedule within 7.</p>
+        </details>
+        <details>
+          <summary>Are materials included?</summary>
+          <p>Yes, we stock common drywall, fasteners, and trim. Specialty finishes can be sourced at cost.</p>
+        </details>
+        <details>
+          <summary>Do you work with property managers?</summary>
+          <p>Absolutely. We coordinate key pickup, send before/after photos, and can invoice centrally.</p>
+        </details>
+      </div>
     </section>
 
     <section id="contact" class="cta-band" aria-labelledby="service-contact">
-      <div>
-        <p class="eyebrow">Ready to schedule?</p>
-        <h2 id="service-contact">Send your list for a fast quote</h2>
-      </div>
-      <div class="cta-band__actions">
-        <a class="btn" data-track="cta:call" href="tel:6476994607">Call 647-699-4607</a>
-        <a class="btn btn--ghost" href="/#contact">Use contact form</a>
+      <div class="section-inner cta-band__inner">
+        <div>
+          <p class="eyebrow">Ready to schedule?</p>
+          <h2 id="service-contact">Send your list for a fast quote</h2>
+        </div>
+        <div class="cta-band__actions">
+          <a class="btn" data-track="cta:call" href="tel:6476994607">Call 647-699-4607</a>
+          <a class="btn btn--ghost" href="/#contact">Use contact form</a>
+        </div>
       </div>
     </section>
   </main>
 
   <footer class="site-footer">
-    <div class="site-footer__top">
+    <div class="section-inner site-footer__top">
       <div>
         <p class="eyebrow">ReadyFix Handyman Services</p>
         <p>Toronto-based handyman specializing in drywall repair, trim, and real-estate punch lists.</p>
@@ -150,7 +187,7 @@
         <p>Toronto core, East &amp; West York, Scarborough, Etobicoke, North York, Mississauga.</p>
       </div>
     </div>
-    <div class="site-footer__bottom">
+    <div class="section-inner site-footer__bottom">
       <p>&copy; <span id="year"></span> ReadyFix Handyman Services</p>
       <a href="/robots.txt">Robots</a>
       <a href="/sitemap.xml">Sitemap</a>
@@ -163,3 +200,4 @@
   </div>
 </body>
 </html>
+
