Slight design adjustmensts and button adds

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </div>
         </a></li>
         <li><a href="/services/drywall-repair-toronto/">
-          <span class="icon" aria-hidden="true">???</span>
+          <span class="icon" aria-hidden="true">&#128737;</span>
           <div>
             <h3>Drywall repair &amp; texture</h3>
             <p>Ceiling patches, seam repair, water damage, ready for paint.</p>
